# mori

./: .gitmodules  requirements-build.txt  setup.py
python/mori/ops/: dispatch_combine.py  dlpack_utils.py
src/ops/dispatch_combine/: intranode.hpp
src/pybind/: CMakeLists.txt  dlpack_utils.hpp  mori.cpp
